--- a/src/main/resources/templates/parties/list.html
+++ b/src/main/resources/templates/parties/list.html
@@ -60,14 +60,15 @@
                 th:object="${party}">
                 <td th:text="*{id}"></td>
                 <td th:text="*{name}"></td>
-                <td th:text="*{maximumAmount}"></td>
+                <td th:text="*{#numbers.formatInteger(maximumAmount, 0, 'WHITESPACE')}"></td>
                 <td th:text="*{maximumTransaction}"></td>
                 <td th:text="*{allowedTimeStart} + ' ~ ' + *{allowedTimeEnd}"></td>
                 <td>What was that now?</td>
                 <td th:text="*{validThru}"></td>
                 <td th:text="*{formattedDays}"></td>
                 <td>
-                    <button th:onclick="'location.href=\'/view/parties/edit/' + *{id} + '\''" style="background-color: #4CAF50; color: white; border: none; border-radius: 4px; padding: 5px 10px; cursor: pointer;">
+                    <button th:onclick="|location.href='/view/parties/edit/*{id}'|"
+                            style="background-color: #4CAF50; color: white; border: none; border-radius: 4px; padding: 5px 10px; cursor: pointer;">
                         수정
                     </button>
                 </td>
