--- a/src/main/resources/templates/points/issue.html
+++ b/src/main/resources/templates/points/issue.html
@@ -53,14 +53,15 @@
                 th:object="${party}">
                 <td th:text="*{id}"></td>
                 <td th:text="*{name}"></td>
-                <td th:text="*{maximumAmount}"></td>
+                <td th:text="*{#numbers.formatInteger(maximumAmount, 0, 'WHITESPACE')}"></td>
                 <td th:text="*{maximumTransaction}"></td>
                 <td th:text="*{allowedTimeStart} + ' ~ ' + *{allowedTimeEnd}"></td>
                 <td>?</td>
                 <td>?</td>
                 <td th:text="*{getFormattedDays}"></td>
                 <td>
-                    <button style="background-color: #4CAF50; color: white; border: none; border-radius: 4px; padding: 5px 10px; cursor: pointer;" th:onclick="|location.href='add/*{id}'|">
+                    <button style="background-color: #4CAF50; color: white; border: none; border-radius: 4px; padding: 5px 10px; cursor: pointer;"
+                            th:onclick="|location.href='add/*{id}'|">
                         충전
                     </button>
                 </td>
