--- a/src/main/resources/templates/transactions/by-user.html
+++ b/src/main/resources/templates/transactions/by-user.html
@@ -63,23 +63,14 @@
             </tr>
             </thead>
             <tbody>
-            <tr style="height: 50px; border-bottom: 1px solid #e0e0e0;">
-                <td>1</td>
-                <td>2024.02.01 13:00:24</td>
-                <td>김자바</td>
-                <td>압구정샌드위치 녹번점</td>
-                <td>서울 은평구 은평로 240 (응암동, 힐스테이트녹번역)</td>
-                <td>8,400</td>
-                <td>결제완료</td>
-            </tr>
             <tr style="height: 50px; border-bottom: 1px solid #e0e0e0;" th:each="transaction : ${transactions}"
                 th:id="${transaction.id}" th:object="${transaction}">
                 <td th:text="*{id}">2</td>
-                <td th:text="*{transactionTime}"></td>
+                <td th:text="*{{transactionTime}}"></td>
                 <td th:text="*{endUserDto.name}"></td>
                 <td th:text="*{franchiseDto.name}"></td>
                 <td th:text="*{franchiseDto.address}"></td>
-                <td th:text="*{amount}"></td>
+                <td th:text="*{#numbers.formatInteger(amount, 0, 'WHITESPACE')}"></td>
                 <td th:text="*{isAccepted ? '결제완료' : '결제취소'}"></td>
             </tr>
             </tbody>
