--- a/src/main/resources/templates/transactions/list.html
+++ b/src/main/resources/templates/transactions/list.html
@@ -28,13 +28,14 @@
             </tr>
             </thead>
             <tbody>
-            <tr style="height: 50px; border-bottom: 1px solid #e0e0e0;" th:each="transactionArchive : ${transactionArchives}"
+            <tr style="height: 50px; border-bottom: 1px solid #e0e0e0;"
+                th:each="transactionArchive : ${transactionArchives}"
                 th:id="${transactionArchive.id}" th:object="${transactionArchive}">
                 <td th:text="*{franchiseDto.id}"></td>
                 <td th:text="*{franchiseDto.name}"></td>
                 <td th:text="*{transactionCount}"></td>
-                <td th:text="*{amountSum}"></td>
-                <td th:text="*{duration}"></td>
+                <td th:text="*{#numbers.formatInteger(amountSum, 0, 'WHITESPACE')}"></td>
+                <td th:text="*{#calendars.format(duration, 'yyyy-MM')}"></td>
             </tr>
             </tbody>
         </table>
