fix(view): Update href for password change link

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -331,7 +331,7 @@
   </div>
 
     <!-- 비밀번호 변경 영역 -->
-    <a href="/manager/changepassword" class="menu-item">
+    <a href="/view/admins/update-password" class="menu-item">
       <span>비밀번호 변경</span>
       <span class="arrow">›</span>
     </a>
