--- a/src/main/resources/templates/franchises/list.html
+++ b/src/main/resources/templates/franchises/list.html
@@ -59,7 +59,8 @@
                 <td th:text="*{phone}"></td>
                 <td th:text="*{address}"></td>
                 <td>
-                    <button style="background-color: #4CAF50; color: white; border: none; border-radius: 4px; padding: 5px 10px; cursor: pointer;">
+                    <button th:onclick="|location.href='update/*{id}'|"
+                            style="background-color: #4CAF50; color: white; border: none; border-radius: 4px; padding: 5px 10px; cursor: pointer;">
                         수정
                     </button>
                 </td>
