--- a/src/main/resources/templates/parties/users.html
+++ b/src/main/resources/templates/parties/users.html
@@ -47,7 +47,8 @@
                 <td th:text="*{partyDto.name}"></td>
                 <td th:text="${#strings.listJoin(model.endUserDtoList.![name], ', ')}"></td>
                 <td>
-                    <button style="background-color: #4CAF50; color: white; border: none; border-radius: 4px; padding: 5px 10px; cursor: pointer;">
+                    <button th:onclick="|location.href='users/edit/*{partyDto.id}'|"
+                            style="background-color: #4CAF50; color: white; border: none; border-radius: 4px; padding: 5px 10px; cursor: pointer;">
                         수정
                     </button>
                 </td>
