fix(template): correct the action URI

--- a/src/main/resources/templates/franchises/add.html
+++ b/src/main/resources/templates/franchises/add.html
@@ -13,7 +13,7 @@
         <span class="path-item current">가맹점 추가</span>
     </div>
 
-    <form action="/franchise/add" method="post">
+    <form action="add" method="post">
         <!-- 회원 추가 폼 -->
         <div class="form-container">
             <table class="form-table">
@@ -48,7 +48,7 @@
                 <tr>
                     <th>아이디</th>
                     <td>
-                        <input type="text" id="id" class="form-input" name="id" placeholder="아이디(연락처)를 입력해주세요"
+                        <input type="text" id="id" class="form-input" name="phone" placeholder="아이디(연락처)를 입력해주세요"
                                required/>
                     </td>
                 </tr>
