--- a/src/main/resources/templates/transactions/list.html
+++ b/src/main/resources/templates/transactions/list.html
@@ -35,7 +35,10 @@
                 <td th:text="*{franchiseDto.name}"></td>
                 <td th:text="*{transactionCount}"></td>
                 <td th:text="*{#numbers.formatInteger(amountSum, 0, 'WHITESPACE')}"></td>
-                <td th:text="*{#calendars.format(duration, 'yyyy-MM')}"></td>
+                <td th:text="${#temporals.format(transactionArchive.duration, 'yyyy-MM')}"></td>
+<!--                <td th:text="*{duration}"></td>-->
+<!--                <td th:text="*{#dates.format(duration, 'yyyy-MM')}"></td>-->
+<!--                <td th:text="*{#calendars.format(duration, 'yyyy-MM')}"></td>-->
             </tr>
             </tbody>
         </table>
