refactor: 페이징 로직 수정, 정렬 id의 내림차순으로 수정

--- a/src/main/resources/templates/transactions/list.html
+++ b/src/main/resources/templates/transactions/list.html
@@ -31,7 +31,7 @@
             <tr style="height: 50px; border-bottom: 1px solid #e0e0e0;"
                 th:each="transactionArchive : ${transactionArchives}"
                 th:id="${transactionArchive.id}" th:object="${transactionArchive}">
-                <td th:text="*{franchiseDto.id}"></td>
+                <td th:text="*{id}"></td>
                 <td th:text="*{franchiseDto.name}"></td>
                 <td th:text="*{transactionCount}"></td>
                 <td th:text="*{#numbers.formatInteger(amountSum, 0, 'WHITESPACE')}"></td>
