refactor : 정산 시 transactionArchive에도 반영되도록 수정

--- a/backend/src/main/resources/templates/transactions/close.html
+++ b/backend/src/main/resources/templates/transactions/close.html
@@ -142,7 +142,7 @@
                     if (response.ok) {
                         alert('선택한 내역이 정산되었습니다.');
 
-                        window.location.href = "list";
+                        location.reload();
                     }
                 });
             }
