--- a/backend/src/main/resources/templates/layout.html
+++ b/backend/src/main/resources/templates/layout.html
@@ -349,6 +349,7 @@
     <div id="party-submenu" class="submenu">
       <a href="/view/parties/add" class="submenu-item">그룹 생성</a>
       <a href="/view/parties/list" class="submenu-item">그룹 관리</a>
+      <a href="/view/parties/activate" class="submenu-item">그룹 활성화</a>
       <a href="/view/parties/users" class="submenu-item">그룹 회원 관리</a>
     </div>
 
